--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 <script src="app/app.core.js"></script>
 <script src="app/routing.js"></script>
-<script src="app/dashboard/dashboard.controller.js"></script>
+<script src="app/controllers/dashboard.controller.js"></script>
 <script src="app/getapi.model.js"></script>
 <script src="app/directives/dashboard.directive.js"></script>
 </body>
