--- a/app/directives/dashboard.html
+++ b/app/directives/dashboard.html
@@ -1,9 +1,9 @@
 <div ng-repeat="venue in vm.model.apiResponse.response.groups[0].items" style="background-color: aquamarine; padding: 10px;margin: 10px; display: inline-table;">
 
     <h3>название: {{venue.venue.name}}</h3> <h5>адрес :{{venue.venue.location.address}}</h5>
-    {{venue.id}}
-    <div style="background-color: crimson" ng-repeat="photos in vm.model.apiResponse.response.groups[0].items[0].venue.categories | limitTo:3" style="display: inline;">
-<img ng-src="{{photos.icon.prefix}}100x50{{photos.icon.suffix}}" title="picture here">
+    {{venue.venue.photos.groups[0].items[0]}}
+    <div style="background-color: crimson" ng-repeat="photo in venue.venue.photos.groups[0].items" style="display: inline;">
+<img ng-src="{{photo.prefix}}100x50{{photo.suffix}}" title="picture here">
         {{photos.icon.prefix}}{{photos.icon.suffix}}
     </div>
 
@@ -12,7 +12,9 @@
 <div>I AM dashboard</div>
 
 <pre>
-    {{vm.model.apiResponse.response.groups[0].items[0].venue.categories[0].icon | json}}
+
+    {{vm.model.apiResponse.response.groups[0].items  | json}}
+    {{vm.model.apiResponse.response.groups[0].items[0].venue.photos.groups[0].items[0] | json}}
 
 
 </pre>
